<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".DetailedChangeFragment">
  <item
    android:id="@+id/action_ignore"
    android:orderInCategory="100"
    android:title="@string/action_ignore"
    android:icon="@drawable/ic_visibility_off_white_18dp"
    app:showAsAction="always"/>
  <item
    android:id="@+id/action_skip"
    android:orderInCategory="100"
    android:title="@string/action_skip"
    android:icon="@drawable/ic_fast_forward_white_18dp"
    app:showAsAction="always"/>
  <item
    android:id="@+id/action_star"
    android:orderInCategory="100"
    android:title="@string/action_star"
    android:icon="@drawable/ic_star_white_16dp"
    app:showAsAction="always"/>
  <item
    android:id="@+id/action_add_reviewer"
    android:orderInCategory="100"
    android:title="@string/action_add_reviewer"
    android:icon="@drawable/ic_person_add_white_18dp"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_abandon"
    android:orderInCategory="100"
    android:title="@string/action_abandon"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_restore"
    android:orderInCategory="100"
    android:title="@string/action_restore"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_help"
    android:orderInCategory="100"
    android:title="@string/action_help"
    app:showAsAction="never"/>
</menu>