<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <CheckBox
        android:id="@+id/colorBackgroundPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_color_background"/>

      <CheckBox
        android:id="@+id/showPatchSetsPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_show_patch_sets"/>

      <CheckBox
        android:id="@+id/showPositiveCodeReviewVotesPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_show_positive_code_review_votes"/>

      <CheckBox
        android:id="@+id/showNegativeCodeReviewVotesPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_show_negative_code_review_votes"/>

      <CheckBox
        android:id="@+id/showCommentsPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_show_comments"/>

      <CheckBox
        android:id="@+id/showReviewersPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_show_reviewers"/>

      <CheckBox
        android:id="@+id/autoFontSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_auto_font_size"/>

      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/fontSize"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="3dp"
          android:text="@string/pref_font_size"/>

        <EditText
          android:id="@+id/fontSizeInput"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:singleLine="true"/>
      </LinearLayout>

      <Button
        android:id="@+id/savePreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
    </LinearLayout>
  </ScrollView>
</RelativeLayout>
